--- a/cookhack/package.json
+++ b/cookhack/package.json
@@ -14,6 +14,7 @@
     "react": "^17.0.2",
     "react-autocomplete": "^1.8.1",
     "react-bootstrap": "^2.1.1",
+    "react-dev-utils": "12.0.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
